--- a/02-CSS/Style.css
+++ b/02-CSS/Style.css
@@ -14,13 +14,17 @@ p {
     font-size: 18px;
     text-align: justify;
     background-color: rgba(105, 238, 234, 0.74);
+    border-style:solid;
+    border-width:2px;
+    padding:10px;
+    margin:20px, 15px, 30px;
 }
 
 body {
     font-family: Roboto;
     font-weight: 100;
     /*background-color:rgb(255, 210, 198);*/
-    background-image:url(PCB.jpg);
+    /*background-image:url(PCB.jpg);*/
     background-attachment:fixed;
 }
 
@@ -57,6 +61,62 @@ body {
      height:30%;
      /*position:absolute;
      padding:initial;*/
-     float:right;
+     /*float:right;*/
      margin-left:15px;
  }
+
+table {
+    /*Рамка*/
+    border: 2px;
+    border-style: solid;
+    border-collapse: collapse;
+    /*Выравнивание таблицы*/
+    margin-left: auto;
+    margin-right: auto;
+    background-color: aliceblue;
+    text-align: center;
+}
+
+td {
+    border: 1px;
+    border-style: solid;
+    border-color: black;    
+}
+
+th {
+    border: 1px;
+    border-style: solid;
+    border-color: black;
+    padding: 6px;
+    background-color: rgb(107, 95, 181);
+    color:white;
+    width:500px;
+}
+
+table caption {
+    background-color:white;
+    text-align:left;
+    font-style:italic;
+}
+
+.RowHeader {
+    font-weight:500;
+    padding:6px;
+    text-align:left;
+}
+
+.Present {
+    background-color:lightgreen;
+}
+
+/*Ссылки*/
+
+h4 {
+    text-align:center;
+}
+
+/*Содержание*/
+ul {
+    background-color:aliceblue;
+    list-style:none;
+}
